# dtc_is_notebooks

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DTC-IS-SLR.ipynb  README.md  code_standards.html  create_repository.html  development_environment.html  development_workflow.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  test_env_dockerfile
.github/workflows/: auto_merge_dependabot_prs.yml  dtc_is_notebooks_test.yml  dtc_python_template_deploy.yml  dtc_python_template_test.yml  generic_build_container_if_needed.yml  generic_deploy.yml  generic_test.yml  generic_test_with_container.yml
_sources/: code_standards.rst.txt  development_environment.rst.txt
docs/source/: conf.py  create_repository.rst  development_workflow.rst  index.rst
src/dtc_is_notebook_helpers/: api_helpers.py  uc2_plotting_helpers.py
src/dtc_python_template/: example_entrypoint_a.py  example_entrypoint_b.py  monitoring.py  schemas.py
src/dtc_python_template/example_sub_package_a/: __init__.py  example_module_a.py
src/dtc_python_template/example_sub_package_b/: example_module_b.py
tests/: conftest.py
tests/dtc_is_notebook_helpers/: test_api_helpers.py  test_uc2_plotting_helpers.py
tests/dtc_python_template/: test_entrypoint_a.py  test_entrypoint_b.py  test_monitoring.py
tests/dtc_python_template/example_sub_package_a/: test_module_a.py
tests/dtc_python_template/example_sub_package_b/: test_module_b.py
tests/test_inputs/expected_annual_slr_for_jakobshavn_mb_sampled.zarr/: .zmetadata
tests/test_inputs/expected_annual_slr_for_jakobshavn_mb_sampled.zarr/ndot/: 0.0.0
tests/test_inputs/expected_annual_slr_for_jakobshavn_mb_sampled.zarr/rot_total/: 0.0.0
tests/test_inputs/expected_annual_slr_for_jakobshavn_mb_sampled.zarr/sdot/: 0.0.0
tests/test_inputs/expected_annual_slr_for_jakobshavn_mb_sampled.zarr/sig_ndot/: .zattrs
tests/test_inputs/expected_annual_slr_for_jakobshavn_mb_sampled.zarr/sig_sdot/: 0.0.0
tests/test_inputs/expected_annual_slr_for_jakobshavn_mb_sampled.zarr/sig_udot/: .zarray  0.0.0
tests/test_inputs/expected_annual_slr_for_jakobshavn_mb_sampled.zarr/time/: .zattrs  0
tests/test_inputs/expected_annual_slr_for_jakobshavn_mb_sampled.zarr/udot/: 0.0.0
tests/test_inputs/expected_annual_slr_for_jakobshavn_mb_sampled.zarr/y/: .zarray  0
tests/test_inputs/expected_global_slr_for_jakobshavn_mb_sampled.zarr/: .zattrs  .zmetadata
tests/test_inputs/expected_global_slr_for_jakobshavn_mb_sampled.zarr/ndot/: 0.0
tests/test_inputs/expected_global_slr_for_jakobshavn_mb_sampled.zarr/rot_total/: 0.0
tests/test_inputs/expected_global_slr_for_jakobshavn_mb_sampled.zarr/sdot/: 0.0
tests/test_inputs/expected_global_slr_for_jakobshavn_mb_sampled.zarr/sig_ndot/: .zattrs
tests/test_inputs/expected_global_slr_for_jakobshavn_mb_sampled.zarr/sig_sdot/: 0.0
tests/test_inputs/expected_global_slr_for_jakobshavn_mb_sampled.zarr/sig_udot/: 0.0
tests/test_inputs/expected_global_slr_for_jakobshavn_mb_sampled.zarr/udot/: .zarray  0.0
tests/test_inputs/expected_global_slr_for_jakobshavn_mb_sampled.zarr/x/: 0
tests/test_inputs/jakobshavn_mass_balance.zarr/: .zattrs  .zmetadata
tests/test_inputs/jakobshavn_mass_balance.zarr/land_ice_surface_specific_mass_balance_flux/: .zarray  .zattrs  0.0
tests/test_inputs/jakobshavn_mass_balance.zarr/land_ice_surface_specific_mass_balance_flux_uncertainty/: .zattrs  0.0
tests/test_inputs/jakobshavn_mass_balance.zarr/point/: .zarray  .zattrs  0
tests/test_inputs/jakobshavn_mass_balance.zarr/spatial_ref/: .zarray  .zattrs  0
tests/test_inputs/jakobshavn_mass_balance.zarr/time/: .zarray  0
tests/test_inputs/jakobshavn_mass_balance.zarr/x/: .zattrs  0
tests/test_inputs/jakobshavn_mass_balance.zarr/y/: .zarray  .zattrs  0
