[build-system]
requires = ["poetry>=1.5"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dtc_python_template"
version = "0.0.55"
description = "Template repository for DTC Ice Sheets Python Packages."
authors = ["Earthwave Ltd <info@earthwave.co.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dtc-ice-sheets/dtc_python_template"
packages = [{ include = "dtc_python_template", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
numpy = "^2.3"
pydantic = "^2.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
typeguard = "^4.4.4"
pre-commit = "^4.3"
ruff = "^0.14.3"
bandit = "^1.8.6"
pytest-cov = "^7.0.0"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-copybutton = "^0.5.2"
commitizen = "^4.9.1"
pydoclint = "^0.7.6"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
preview = true
select = [
    "T20", # Disallow print statements
    "A",    # Ambiguity
    "ANN",  # Annotations
    "B",    # Bad practices
    "C90",    # Complexity
    "D",    # Documentation
    "E",    # Errors
    "F",    # Pyflakes (e.g. unused imports and vars)
    "G",    # logging formatting
    "I",    # Imports
    "N",    # Naming
    "Q",    # Quoting
    "W",    # Warnings
    "PT",   # pytest-style
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "PIE",  # flake8-pie
    "RUF",  # Ruff-specific rules
    "BLE",  # Blind except
    "RET",  # Return statements
    "PTH",  # Use pathlib
    "PD",   # Pandas
]

[tool.pydoclint]
style='numpy'
check_style_mismatch="true"

mccabe = { max-complexity = 10 }

ignore = [
    "D203", # One blank line required before class docstring (conflicts with D211)
    "D204", # One blank line required after class docstring
    "D205", # Docstring with no content
    "D212", # Multi-line docstring summary should start at the second line
    "D213", # Multi-line docstring summary should start at the first line
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "T201", # Allow print statements in test files, as they are commonly used for debugging
    "E402", # Allow 'import' statements not being at the top of the file (common in test files for clarity)
    "S101", # Allow the use of 'assert' statements in test files (common practice in pytest)
    "D103", # Ignore missing docstring warnings for functions in test files (commonly not required for small test functions)
    "ANN",  # Ignore missing type annotations for functions in test files (commonly not required for small test functions)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy" # Accepts: "google", "numpy", or "pep257"
[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.pytest.ini_options]
addopts = "--disable-warnings --cov dtc_python_template --cov-fail-under=80"
typeguard-packages = """dtc_python_template"""
typeguard-debug-instrumentation = true
typeguard-forward-ref-policy = "ERROR"
typeguard-collection-check-strategy = "ALL_ITEMS"
