[build-system]
requires = ["poetry>=1.5"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dtc_is_notebooks"
version = "1.0.0"
description = "Jupyter notebooks for the DTC Ice Sheets project"
authors = ["DTC Ice Sheets consortium"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dtc-ice-sheets/dtc_is_notebooks"
packages = [{ include = "dtc_is_notebook_helpers", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = "^2.3"
xarray = "^2025.10.1"
matplotlib = "^3.10.7"
cartopy = "^0.25.0"
zarr = "^3.1.3"
pandas = "^2.3.3"
requests = "^2.32.5"
tenacity = "^9.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
typeguard = "^4.4.4"
pre-commit = "^4.5"
ruff = "^0.14.6"
bandit = "^1.8.6"
pytest-cov = "^7.0.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "T201", # Disallow print statements
    "A",    # Ambiguity
    "ANN",  # Annotations
    "B",    # Bad practices
    "C",    # Complexity
    "D",    # Documentation
    "E",    # Errors
    "F",    # Pyflakes (e.g. unused imports and vars)
    "I",    # Imports
    "N",    # Naming
    "Q",    # Quoting
    "S",    # Stylistic
    "W",    # Warnings
]

mccabe = { max-complexity = 10 }

ignore = [
    "D203", # One blank line required before class docstring (conflicts with D211)
    "D204", # One blank line required after class docstring
    "D205", # Docstring with no content
    "D212", # Multi-line docstring summary should start at the second line
    "D213", # Multi-line docstring summary should start at the first line
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "T201", # Allow print statements in test files, as they are commonly used for debugging
    "E402", # Allow 'import' statements not being at the top of the file (common in test files for clarity)
    "S101", # Allow the use of 'assert' statements in test files (common practice in pytest)
    "D103", # Ignore missing docstring warnings for functions in test files (commonly not required for small test functions)
    "ANN",  # Ignore missing type annotations for functions in test files (commonly not required for small test functions)
]
"**.ipynb" = [
    "T201", # Allow print statements in Jupyter notebooks, as they are commonly used for debugging and output display
    "E402", # Allow 'import' statements not being at the top of the file (common in notebooks for clarity)
    "S101", # Allow the use of 'assert' statements in notebooks (common practice in exploratory coding)
]


[tool.ruff.lint.pydocstyle]
convention = "numpy" # Accepts: "google", "numpy", or "pep257"
[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.pytest.ini_options]
addopts = "--disable-warnings --cov dtc_is_notebook_helpers --cov-fail-under=80"
typeguard-packages = """dtc_is_notebook_helpers"""
typeguard-debug-instrumentation = true
typeguard-forward-ref-policy = "ERROR"
typeguard-collection-check-strategy = "ALL_ITEMS"
